<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/playerView"
            android:name="com.example.android.bakingapp.Fragments.Video_step"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="10dp" />

        <ImageView
            android:id="@+id/step_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/step_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />


        <RelativeLayout
            android:id="@+id/navigation_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/prev_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/prev_step"
                tools:text="Prev step" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="8dp"
                android:padding="10dp"
                android:text="@string/next_step"
                tools:text="Next step" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
